--- a/attempt3/style.css
+++ b/attempt3/style.css
@@ -1,22 +1,36 @@
-body {
+html, body {
+    height: 100%;
     margin: 0;
     padding: 0;
 }
 
+#container {
+    height: 100%;
+    width: 100%;
+    border: 3px solid #fff;
+    padding: 10px;
+}
+
 #map {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
+    float: top;
+    height: 70%;
+    width: auto;
+}
+
+#formInput {
+    height: 30%;
 }
 
 .runner {
     margin: -10px -10px;
     width: 20px;
     height: 20px;
-    border: 2px solid #fff;
+    border: 2px solid red;
     border-radius: 50%;
     background: #3887be;
     pointer-events: none;
 }
+
+
+
+
