Values of weather information displaying on webpage.

--- a/attempt4/templates/index.html
+++ b/attempt4/templates/index.html
@@ -34,8 +34,17 @@
             <button onclick="weatherConditions()">
                 Lets Go!
             </button>
-            <p id="weatherInfo" hidden>a</p>
+            
+                <p id="temperature"></p>
+                <p id="windDirection"></p>
+                <p id="windSpeed"></p>
+                <p id="humidity"></p>
+                <p id="pressure"></p>
+                <p id="precipitationMax"></p>
+                <p id="precipitationMin"></p>
+        
             </div>
+            
     </div>
 </body>
 </html>
