Fixed all issues with weather information retrival.

--- a/attempt4/templates/index.html
+++ b/attempt4/templates/index.html
@@ -34,15 +34,16 @@
             <button onclick="weatherConditions()">
                 Lets Go!
             </button>
-            
+            <div id="weatherInfo">
                 <p id="temperature"></p>
                 <p id="windDirection"></p>
                 <p id="windSpeed"></p>
                 <p id="humidity"></p>
                 <p id="pressure"></p>
+                <p id="precipitation"></p>
                 <p id="precipitationMax"></p>
                 <p id="precipitationMin"></p>
-        
+            </div>
             </div>
             
     </div>
