--- a/attempt5/templates/index.html
+++ b/attempt5/templates/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon"> 
     <meta charset="UTF-8">
+    {{ JSGlue.include() }}
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
-    <title>My Run Today App</title>
+    <title>My Run Plan App</title>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css')}}">
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
     <script src='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
-    <script src="main.js" defer></script>
-    <script src="date.js" defer></script>
-    <script src="weather2.js" defer></script>
+    <script src="{{ url_for('static', filename='main.js') }}" defer></script>
+    <script src="{{ url_for('static', filename='date.js') }}" defer></script>
+    <script src="{{ url_for('static', filename='weather.js') }}" defer></script>
 </head>
 </head>
 <body>
@@ -32,8 +34,18 @@
             <button onclick="weatherConditions()">
                 Lets Go!
             </button>
+            <div id="weatherInfo">
+                <p id="temperature"></p>
+                <p id="windDirection"></p>
+                <p id="windSpeed"></p>
+                <p id="humidity"></p>
+                <p id="pressure"></p>
+                <p id="precipitation"></p>
+                <p id="precipitationMax"></p>
+                <p id="precipitationMin"></p>
             </div>
-            <p id="infoForRun" hidden></p>
+            </div>
+            
     </div>
 </body>
 </html>
