comments added to code

--- a/everything_together/static/style.css
+++ b/everything_together/static/style.css
@@ -1,53 +1,25 @@
+/* remove padding and margin from the whole page */
 html, body {
-    height: 100%;
+    height: 100vh;
+    width: 100vw;
     margin: 0;
     padding: 0;
 }
 
+/* set map height and width */
 #map {
     height: 65vh;
     width: 100vw;
 }
 
-#dist {
-    margin: 0;
-    padding: 0;
-    visibility: visible;
-}
-
-.contain {
+/* set bottom part height and width */
+.boxs {
     height: 35vh;
     width: 100vw;
-    margin: 0;
-    padding: 0;
 }
 
-#flexSwitchCheckChecked {
-    margin-left: 10px;
+/* distance input set to visible 
+It's needed for function in index.html otherwise it won't work. */
+#dist {
+    visibility: visible;
 }
-
-#weatherSliderButton {
-    margin-top: 20px;
-}
-
-#routeButton {
-    margin-left: 70px;
-}
-
-.each-box {
-    width: 25vw;
-    height: auto;
-    margin: 0 auto;
-    padding: 10px;
-}
-
-.weather, .distance {
-    margin-top: 2.5vh;
-}
-
-dl, dt, dd {
-    margin: 0;
-    padding: 0;
-    line-height: 1;
-}
-
